panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__preprocessor__include__test_include_quoted_falls_back_to_bracketed.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/preprocessor/include/test_include_quoted_falls_back_to_bracketed.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/include/test_include_quoted_falls_back_to_bracketed.c"
   (typedef ptrdiff_t `long`)
   (typedef size_t `unsigned long`)
   (typedef max_align_t `long long`)
   (typedef wchar_t `int`)
   (typedef nullptr_t `nullptr_t`)
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (xs~1 `array<int; 2>` @0)
            (braced
               (subobject +0 (1 `int` @0))
               (subobject +4 (2 `int` @4))))
         (return
            (logical-or `int` @8
               (0 `int` @8)
               (1 `int` @12))))))

----- stderr -----
